[tool.poetry]
name = "auto-gpt"
version = "0.1.0"
description = ""
authors = ["Merwane Hamadi <merwanehamadi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
agent = "^0.1.2"
pydantic = "^2.4.2"
fastapi = "^0.104.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
